# xhs-recon

./: .gitignore  README.md  pyproject.toml  run.sh
configs/: sample.yaml  sample_mediacrawler.yaml  test_mediacrawler.yaml  watchlist-测试.yaml  watchlist-留学辅导.yaml
configs/AP-ALevel/: account-discovery.yaml  accounts-candidates.yaml  discovery-hot.yaml  discovery-pending.yaml  keywords-discovery-pending.yaml  keywords-discovery.yaml  keywords.yaml  run.yaml
configs/recon/: account.sample.yaml
configs/测试/: run.yaml  watchlist.yaml
configs/留学辅导/: keywords.yaml  run.yaml  watchlist.yaml
data/exports_real/: account_rank.csv  accounts.csv  notes.csv  report_input.md  typical_notes.csv
docs/: 增量存储重构.md  平台接入.md
scripts/: backfill_store.py  integration_mediacrawler.py  integration_store.py
src/: models.py
src/adapters/: mysql_store.py  (+3 more)
tests/: test_account_ranker.py  test_aggregator.py  test_artifacts.py  test_cli.py  test_config_assets.py  test_export_archive.py  test_exporter.py  test_fixture_adapter.py  test_imports.py  test_keyword_expander.py  test_logging_setup.py  test_mediacrawler_adapter.py  test_models.py  test_note_selector.py  test_parsers.py  test_pipeline_e2e.py  test_pipeline_logging.py  test_pipeline_provider.py  test_ports.py  test_progress.py  test_time_window.py  test_watchlist.py  test_web_bundle.py  test_web_feed.py  test_web_report.py
web/: __init__.py  app.js  bundle.py  bundle_readme.md  feed.py  index.html  report.py  style.css
workbench/: AGENTS.md  Harness Engineering.md  README.md  SCHEMA.md  SUMMARY.md  index.md  规范.md  需求报告.md
(+246 files in other folders)
